--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Petrovich</title>
-    <link rel="manifest" href="manifest.json">
-    <link rel="shortcut icon" href="favicon.ico">
-    <link href="./static/css/main.2ce7031a.css" rel="stylesheet">
+    <link rel="manifest" href="/petrovich-test-task/manifest.json">
+    <link rel="shortcut icon" href="/petrovich-test-task/favicon.ico">
+    <link href="/petrovich-test-task/static/css/main.2ce7031a.css" rel="stylesheet">
 </head>
 
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script type="text/javascript" src="./static/js/main.159819c3.js"></script>
+    <script type="text/javascript" src="/petrovich-test-task/static/js/main.159819c3.js"></script>
 </body>
 
 </html>
